@@ -123,8 +123,9 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2012-2015 Michal Špaček
- BSD 2-Clause License
+© 2012-2015 Michal Špaček
+
+BSD 2-Clause License
 
 =head1 VERSION
 
