@@ -72,8 +72,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2012-2015 Michal Špaček
-     BSD 2-Clause License
+    © 2012-2015 Michal Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.07
